apps/base/server/halo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: halo-server
  namespace: halo-system
  labels:
    app: halo-server
spec:
  selector:
    matchLabels:
      app: halo-server
  revisionHistoryLimit: 10
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: halo-server
    spec:
      volumes:
        - name: halo-storage
          persistentVolumeClaim:
            claimName: halo-pvc
        - name: halo-config
          configMap:
            name: halo-config
            items:
              - key: application.yaml
                path: application.yaml
      containers:
        - name: halo
          image: "ghcr.io/halo-dev/halo-dev:sha-de40a10"
          imagePullPolicy: IfNotPresent
          ports:
            - name: halo-port
              containerPort: 8090
              protocol: TCP
          volumeMounts:
            - name: halo-storage
              mountPath: /root/halo-next
            - name: halo-config
              mountPath: /etc/config
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: halo-port
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: halo-port
          startupProbe:
            httpGet:
              path: /actuator/health
              port: halo-port
