apps/base/server/halo-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: halo-server-service
  namespace: halo-system
spec:
  selector:
    app: halo-server
  ports:
    - name: halo-server-service-port
      protocol: TCP
      port: 8090
      targetPort: halo-port
