apps/base/server/halo-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: halo-server-ingress
  namespace: halo-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: "next.ryanc.cc"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: halo-server-service
                port:
                  number: 8090
  tls:
    - hosts:
        - next.ryanc.cc
      secretName: next-ryanc-cc-cert
